--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:rowCount="4"
+    android:columnCount="2"
+
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -12,8 +15,47 @@
     tools:context="com.example.movieapp.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+
+    <ImageView
+        android:id="@+id/image1"
+        android:layout_gravity="fill"
+        android:layout_width="150dp"
+
+        android:layout_height="200dp"
+
+        android:src="@drawable/ic_launcher"
+        />
+
+
+    <ImageView
+        android:id="@+id/image2"
+        android:layout_gravity="fill"
+
+        android:layout_width="150dp"
+        android:layout_height="200dp"
+        android:src="@drawable/ic_launcher"
+        />
+
+    <ImageView
+        android:id="@+id/image3"
+        android:layout_gravity="fill"
+        android:layout_width="150dp"
+        android:layout_height="200dp"
+
+        android:src="@drawable/ic_launcher"
+        />
+
+    <ImageView
+        android:id="@+id/image4"
+        android:layout_gravity="fill"
+        android:layout_width="150dp"
+        android:layout_height="200dp"
+
+        android:src="@drawable/ic_launcher"
+        />
+
+
+
+
+
+</GridLayout>
