--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,4 +15,17 @@
     tools:showIn="@layout/activity_main">
 
 
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/fragment"
+
+        tools:layout="@layout/fragment_movie_grid"
+
+        android:name="com.example.movieapp.MovieGridFragment"
+
+        android:layout_height="match_parent"
+
+        android:layout_width="match_parent"/>
+
+
 </RelativeLayout>
