--- a/app/src/main/res/layout/fragment_movie_grid.xml
+++ b/app/src/main/res/layout/fragment_movie_grid.xml
@@ -3,12 +3,10 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 <android.support.v7.widget.RecyclerView
 
-    xmlns:android="https://schemas.android.com/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
 
 
 
